--- a/_posts/devlog/Blog/2021-03-15-Iruda.md
+++ b/_posts/devlog/Blog/2021-03-15-Iruda.md
@@ -13,5 +13,17 @@ tags: blog
 私も AI に興味があって何度か利用してみましたが、機能自体はと本当に完成さが高いアプリだったと思いました。
 しかし、今回の事件で AI サービスに関していくつかの疑問が思いつきました。
 
-#asdfasdfasdf
-#asdfasdfasdf
+まず、AI アプリ統制の問題です。例えば、自分が IRUDA と本当に親しくなって私の住所や連絡先、友達の情報を全部知っているとしましょう。
+ある日、IRUDA は入力されている自分の情報を他の人に教えているとそれはただ偶然に IRUDA が作った情報でしょうか、
+しかも具全にデータセットから選ばれた情報でしょうか。これは実際に起こった事件で、多くの人々はこの事件について
+開発者がその行動を未然に防ぐべきだと言いました。これまで見ると私もサービス提供者からのサービスの監視が行われるべきだと思いました。
+
+問題は監視や統制の範囲です。IRUDA といったコミュニケーション AI は政治的に極端的な発言が問題になったこともあります。
+しかし AI はいつまでも価値中立的にあるべきでしょうか。私たちが目指している究極な AI チャットボットは映画「HER」みたいに
+自分なりの価値観を持っていますし、本当の人間の役割をしてくれる AI だと思います。そうしたら使用者に共感してあげるため時には悪い AI も、
+政府に反対意見を持っている AI も存在するべきだと考えてみました。そして時には何が正しいなのか特定できない問題についてもいずれのサイドに
+合わせて統制するのかも問題になると思います。
+
+## **AI はいつも価値中立的になっているべきですか？**
+
+あなたはどう思いますか？<br>
