--- a/_posts/devlog/projects/2021-04-14-BOOMBOX.md
+++ b/_posts/devlog/projects/2021-04-14-BOOMBOX.md
@@ -6,22 +6,41 @@ category: devlog
 tags: projects
 ---
 
-<iframe width="100%" height="360" src="https://youtu.be/9GFpFab9nvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="500" src="https://www.youtube.com/embed/9GFpFab9nvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-# 概要
+**「フルスクリーンモード」・「HD 画質」で設定するともっと綺麗に見えます。**
 
-## 紹介
+## 概要
+### 1. 紹介
+ダンス動画の視聴、投稿、そして AI 動作認識機能でダンスが学べる総合プラットフォーム。<br>
 
-## 期間
+### 2. 期間
+- 2020.12.15 - 2021.03.25
 
-## 사용한 기술
+### 3. 使った技術
+- Spring Framework, MyBatis
+- Java, Oracle
+- HTML, CSS, JavaScript, jQeury
+- BootStrap, Git, Sourcetree, OvenApp.io
 
-## 自分の役割
+### 4. 自分の役割
+- Team Leader
+- サービス企画、DB、UI設計
+- AIモーション認識API、動作矯正、カウント機能
+- 動画ストリーミングサービス
+- 動画アップロード機能
+- 検索、いいね！、フォロー機能
+- Home, Navi, Logo Design
 
-# Mockup
+## Mockup
+https://ovenapp.io/view/zHcVD5ZAgWSjpKpLheOQqEYAmyQX960l/YPMJ5
 
-# Database
 
-#
+## Database
+<img src='/assets/img/post_data/project/boombox/erd.png' alt='boomboxintro' width='100%'>
 
-#
+## 最強のチームワーク
+<img src='/assets/img/post_data/project/boombox/team1.png' alt='boomboxintro' width='300px'>
+<img src='/assets/img/post_data/project/boombox/team3.png' alt='boomboxintro' width='300px'>
+<img src='/assets/img/post_data/project/boombox/team2.png' alt='boomboxintro' width='300px'> <br>
+
