--- a/_posts/dailylife/2021-05-09-Haiku.md
+++ b/_posts/dailylife/2021-05-09-Haiku.md
@@ -6,4 +6,19 @@ category: dailylife
 
 ## 初めて俳句を作ってみた！大満足！
 
-<img src='/assets/img/post_data/dailylife/haiku.JPG' alt='haiku' width='500px'><br>
+<img src='/assets/img/post_data/dailylife/haiku.JPG' alt='haiku' width='100%'><br>
+
+
+
+
+高校生の時から日本ならではの静的な俳句の雰囲気やその余韻が好きだったので
+いつか作ってみたかった。日本の人に見られるとどう思われるか分からないが、
+自分の考えを込めて、俳句のルールの守りながら作ったことに意味があるだろう。
+
+次は背景になる絵も書きながら作ろうかな。。。
+
+今本当にやりたかったIT技術を勉強し、開発プロジェクトまでやっている私に、
+様々な問題を自分なりの方法で乗り越えながら挑戦をし続けている私に、
+「挑戦する事態が美しいことだから、頑張れ！」という気持ちをこめた俳句だ。ｗ
+
+
