--- a/_posts/dailylife/2021-05-09-Haiku.md
+++ b/_posts/dailylife/2021-05-09-Haiku.md
@@ -13,7 +13,7 @@ category: dailylife
 
 高校生の時から日本ならではの静的な俳句の雰囲気やその余韻が好きだったので
 いつか作ってみたかった。日本の人に見られるとどう思われるか分からないが、
-自分の考えを込めて、俳句のルールの守りながら作ったことに意味があるだろう。
+自分の考えを込めて、俳句のルールを守りながら作ったことに意味があるだろう。
 
 次は背景になる絵も書きながら作ろうかな。。。
 
