--- a/_posts/dailylife/2021-05-09-Haiku.md
+++ b/_posts/dailylife/2021-05-09-Haiku.md
@@ -19,6 +19,7 @@ category: dailylife
 
 今本当にやりたかったIT技術を勉強し、開発プロジェクトまでやっている私に、
 様々な問題を自分なりの方法で乗り越えながら挑戦をし続けている私に、
-「挑戦する事態が美しいことだから、頑張れ！」という気持ちをこめた俳句だ。ｗ
+「見えない先だとしても、一度決めたら必ずや成し遂げる」私の信念と
+「挑戦する事態も美しいことだから、頑張れ！」という気持ちをこめた俳句だ。ｗ
 
 
