--- a/_posts/devlog/Algorithm/2021-03-27-Hikari.md
+++ b/_posts/devlog/Algorithm/2021-03-27-Hikari.md
@@ -5,8 +5,19 @@ subtitle: "光が鏡から反射される回数"
 category: devlog
 tags: algorithm
 ---
+(N * N) 行列の格子で仕切られているルームで1行1列の左から光を通します。
+そして下図のようにいくつかの鏡があって光を反射しています。<br>
+<img src='/assets/img/post_data/algorithm/mirror_sample.JPG' alt='mirrorSample' width='80%'>
+<br><br>
+鏡の位置と形は、以下のような内容の.txtファイルで与えられます。<br>
 <img src='/assets/img/post_data/algorithm/mirror_txt.JPG' alt='mirror.txt' width='30%'>
+<br>
+.txtファイルは、上からテストの回数、行列の大きさ、ルームの形を表示しています。<br>
+例えば上の写真の場合2回のテストが行われ、一つ目のテストは(10*10)サイズのルーム,二つ目のテストは(5*5)サイズのルームになる。<br>
+そして行列中の数字0の場合は鏡のないところ、1の場合は右上から左下に対角線状の鏡、2の場合は左上から右下に対角線の鏡です。
 
+
+**問題：txtファイルからルームの形を読んで光が反射されてルームの外に出るまでの反射回数を出力してください。**
 
 ```java
 import java.io.FileInputStream;
