--- a/_posts/devlog/Algorithm/2021-03-27-Hikari.md
+++ b/_posts/devlog/Algorithm/2021-03-27-Hikari.md
@@ -13,7 +13,7 @@ tags: algorithm
 <img src='/assets/img/post_data/algorithm/mirror_txt.JPG' alt='mirror.txt' width='30%'>
 <br>
 .txtファイルは、上からテストの回数、行列の大きさ、ルームの形を表示しています。<br>
-例えば上の写真の場合2回のテストが行われ、一つ目のテストは(10*10)サイズのルーム,二つ目のテストは(5*5)サイズのルームになる。<br>
+例えば上の写真の場合2回のテストが行われ、一つ目のテストは(10*10)サイズのルーム,二つ目のテストは(5*5)サイズのルームになります。<br>
 そして行列中の数字0の場合は鏡のないところ、1の場合は右上から左下に対角線状の鏡、2の場合は左上から右下に対角線の鏡です。
 
 
