edit boombox presentation

--- a/_posts/devlog/projects/2021-04-14-BOOMBOX.md
+++ b/_posts/devlog/projects/2021-04-14-BOOMBOX.md
@@ -6,7 +6,7 @@ category: devlog
 tags: projects
 ---
 
-<iframe width="100%" height="500" src="https://www.youtube.com/embed/9GFpFab9nvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="500" src="https://www.youtube.com/embed/Al-Vi1tkMxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 **「フルスクリーンモード」・「HD 画質」で設定するともっと綺麗に見えます。**
 
